fixed bottom whitespace

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,7 +23,7 @@
 /* ---------------------------------- style --------------------------------- */
 
 html, body{
-  max-height: 90vh;
+  height: 100%;
 }
 
 main{
@@ -51,8 +51,16 @@ a{
 #header{
   display: flex;
   height: 120px;
-  width: 100vw;
+  width: 100%;
   align-items: flex-start;
+}
+
+#limebar{
+  height: 60px;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  background-color: #cddb28;
 }
 
 #header h1{
@@ -69,7 +77,7 @@ a{
   width: 171px;
   height: auto;
   margin-left: 15px;
-  margin-top: -85px;
+  margin-top: -83px;
   z-index: 10;
 }
 
@@ -78,30 +86,6 @@ a{
   width: 35%;
   height: 50%;
   margin: auto;
-}
-
-/* Section: Home */
-
-.rotate{
-  transform: rotate(45deg);
-  margin-top: 200px;
-  margin-left: -500px;
-}
-
-.main-container #top-h1{
-  margin-top: 100px;
-}
-
-#navbar{
-  display: flex;
-  background: #cddb28;
-  height: 40px;
-  text-transform: uppercase;
-  margin-top: 83px;
-  z-index: 10;
-  width: 100vw;
-  display: flex;
-  align-items: flex-start;
 }
 
 .homepage{
@@ -116,11 +100,23 @@ a{
   background: linear-gradient(to bottom, rgba(0,0,0,0.25) 0%, transparent 100%)
 }
 
+/* Section: Home */
+
+#navbar{
+  display: flex;
+  background: #cddb28;
+  height: 40px;
+  text-transform: uppercase;
+  border-radius: 5px;
+  margin-top: 83px;
+  z-index: 10;
+}
+
 .btn, .msg {
   margin: auto;
   height: 50%;
   padding: 10px;
-  width: 300px;
+  width: 150px;
   color: #676767;
   font-weight: 500;
   transition: .3s;
@@ -146,13 +142,16 @@ a{
   height: 40px;
 }
 
+@media (max-width: 1146px) {
+
+}
+
 .main-container{
   display: flex;
   width: 100%;
   /* border: #282c34 2px solid; */
   justify-content: flex-start;
   flex-direction: column;
-  min-height: calc(100vh - 275px)
 }
 
 .main-container h1 {
@@ -229,36 +228,6 @@ a{
   margin-top: 15px;
 }
 
-/* Section: Modal */
-#modal_background{
-  display: flex;
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100vw;
-  background-color: rgba(0, 0, 0, 0.6);
-  z-index: 2000;
-  justify-content: center;
-  align-items: center;
-}
-
-#modal_container{
-  height: 300px;
-  width: 300px;
-  border-radius: 15px;
-  background-color: rgb(146, 144, 133);
-  position: relative;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding-top: 35px;
-  padding-bottom: 35px;
-  padding-left: 28px;
-  padding-right: 28px;
-
-}
-
 /* Section: Landing Page */
 
 #csv-button{
@@ -292,15 +261,10 @@ a{
 
 #signout-button:hover{
   background: #006877;
-  cursor: pointer;
 }
 
 
 /* Section: Footer */
-
-.push{
-  height: 372.42px;
-}
 
 #footer{
   width: 100%;
@@ -400,6 +364,10 @@ a{
   margin-top: 20px;
   margin-left: 20px;
 }
+
+/* #footer-bottom p{
+  width: 400px;
+} */
 
 #footer-bottom #text{
   width: 500px;
